# pastec

./: CMakeLists.txt
src/: CMakeLists.txt  Dictionary.hpp  Request.cpp  Request.h  Session.hpp  Storage.cpp  Storage.h  main.cpp
